--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.0
 dj-database-url==0.5.0
 Django==4.0.3
+django-heroku==0.3.1
 django-on-heroku==1.1.2
 gunicorn==20.1.0
 Pillow==9.0.1
